Wrap code lines to avoid long line of code.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -99,7 +99,9 @@ body.night .switch-wrapper .moon,html.night .switch-wrapper .moon{
 	background:url(../img/switch/moon-white.svg) no-repeat center;
 	background-size:100%
 }
-body.night .experience .job__time,body.night .footer__copyright,body.night .intro,body.night .skills .skillz__category__label,body.night .status,body.night a,body.night strong,html.night .experience .job__time,body.night .nickname,html.night .footer__copyright,html.night .intro,html.night .skills .skillz__category__label,html.night .status,html.night a,html.night strong{
+body.night .experience .job__time,body.night .footer__copyright,body.night .intro,body.night .skills .skillz__category__label,body.night .status,body.night a,body.night strong,
+html.night .experience .job__time,body.night .nickname,html.night .footer__copyright,html.night .intro,html.night .skills .skillz__category__label,html.night .status,html.night a,
+html.night strong{
 	color:#e7e7e7
 }
 body.night .section__content .underline-link:after,html.night .section__content .underline-link:after{
